Upgrade jQuery from v1.12 to v3.6
Relevant jQuery release notes:
* https://jquery.com/upgrade-guide/3.0/
* https://jquery.com/upgrade-guide/3.5/

Upgrade jQuery in templates/base.html,
submission_plain.html and exercise_plain.html.

Replace .size() with .length.
.size() is deprecated as of jQuery 1.8 and removed in jQuery 3.0
in favor of the .length property.

The .context and .selector properties were deprecated in
jQuery 1.9 and removed in 3.0.

Breaking change: .width(), .height(), .css("width"), and
.css("height") can return non-integer values.

The old event methods .bind(), .unbind(), .delegate() and .undelegate()
are being deprecated as of 3.0. They are replaced by .on() and .off().

Fixes #776

--- a/exercise/templates/exercise/_user_results.html
+++ b/exercise/templates/exercise/_user_results.html
@@ -204,8 +204,8 @@ var aplusPointsTotal = {{ total_json|safe }};
 $(function() {
   var limit = 2;
   var expired = $(".module-expired");
-  if (expired.size() > limit) {
-    expired.slice(0, expired.size() - limit).hide();
+  if (expired.length > limit) {
+    expired.slice(0, expired.length - limit).hide();
     $("#toggle-expired").removeClass("hide")
     .find("button").on("click", function(event) {
       event.preventDefault();
@@ -228,7 +228,7 @@ $(function() {
     }
     $('.module-panel').each(function(index, panel) {
       var mod = $(panel);
-      if (mod.find("tr:not(.hide)").size() > 0) {
+      if (mod.find("tr:not(.hide)").length > 0) {
         mod.removeClass("hide");
       } else {
         mod.addClass("hide");
