Add a group size indicator to exercise frame
Currently, the minimum and maximum allowed group sizes of an exercise
are not displayed in the exercise UI (except for a warning message, if
the user is not currently submitting with a group of appropriate size).
This commit adds a group size indicator to the header of the exercise
frame next to the deadline indicator.

Related to #808

--- a/assets/sass/legacy/_main.scss
+++ b/assets/sass/legacy/_main.scss
@@ -272,10 +272,30 @@ td.submissions-dropdown {
     border-top-right-radius: 4px;
 }
 .exercise-summary .navbar-nav {
-    margin: 0;
+	margin: 0;
 }
 .exercise-summary .navbar-nav .navbar-text {
-    margin: 15px 15px 0 15px;
+    margin: 10px 15px 10px 15px;
+}
+.exercise-summary .navbar-nav .navbar-text ul {
+	list-style: none;
+	padding-left: 0;
+}
+/* Use flexbox to align header navbar sections (when the navbar is not
+collapsed due to narrow viewport) */
+@media (min-width: $grid-float-breakpoint) {
+	.exercise-summary .navbar-nav {
+		align-items: stretch;
+		display: flex;
+		flex-wrap: wrap;
+	}
+	.exercise-summary .navbar-nav>li {
+		display: flex;
+	}
+	.exercise-summary .navbar-nav>li>a {
+		align-items: center;
+		display: flex;
+	}
 }
 .exercise-summary .navbar-nav>li>a,
 .exercise-summary .navbar-nav>.active>a,
