Implement enrollment roles and statuses
This commit adds two new attributes to the Enrollment model: role
(student/assistant/teacher) and status (active/removed/banned), as well
new functionality related to these attributes. Because of this change,
the many-to-many relationships "students"/"assistants"/"teachers" no
longer exist. Instead, all of them are handled as enrollments with
different roles. Additionally, enrollments can now be removed by
by setting the status attribute, without deleting them from the
database.

New functionality and fixes include:
- Ability for course staff to remove and ban students from the course by
using the Participants page. Removed students can re-enroll if they
want, banned students can't.
- The Participants page also lists removed and banned students, and the
table can be filtered by status.
- Students can unenroll (remove) themselves from the course, by using
the Unenroll option in the left sidebar.
- Each instance of a course can now have different teachers. The
teachers and assistants of the course instance can be changed on the
Course tab of the course editor. The Teachers tab has been removed.
- The All results page, as well as Course points and other API views
that return exercise result data, no longer lists course staff.

Fixes #602

Add missing aria-labelled-by, remove argument

The aria-labelled-by argument was missing from course_base.html, and
the enrolled_courses field in userprofile/api/full_serializers.py had
an unnecessary source argument.

Related to #602
New translation strings for enrollment roles

This commit changes the enrollment roles feature to use the new
translation string style.

--- a/course/templates/course/_course_menu.html
+++ b/course/templates/course/_course_menu.html
@@ -210,3 +210,15 @@
 {% endfor %}
 
 {% endif %}
+
+{% if is_student %}
+<li class="header">
+	<h4>{% trans "ENROLLMENT" %}</h4>
+</li>
+<li class="menu-unenroll">
+	<a data-toggle="modal" data-target="#unenroll-modal" role="button">
+		<span class="glyphicon glyphicon-remove-sign" aria-hidden="true"></span>
+		{% trans "UNENROLL" %}
+	</a>
+</li>
+{% endif %}
