--- a/course/templates/course/_enroll_form.html
+++ b/course/templates/course/_enroll_form.html
@@ -1,9 +1,9 @@
 {% load i18n %}
 {% load course %}
 
-{% if not is_student and not instance.is_past and not instance.has_enrollment_closed %}
+{% if not is_student and not is_course_staff and not instance.is_past and not instance.has_enrollment_closed %}
 	<div class="alert alert-info">
-	{% if enrollable or is_course_staff %}
+	{% if enrollable %}
 		{% if instance.is_enrollment_open %}
 			<form method="post" action="{{ instance|url:'enroll' }}">
 				{% csrf_token %}
