Add alternative SISU format to results view
Adds a new checkbox in course results view that changes to
SISU-compatible output format. When exported as CSV, this should
be compatible with that is accepted by SISU. The SISU format has
fields that are currently not used, such as course grade and
assessment date, but teacher should fill these e.g. in Excel or
by some other tool.

--- a/exercise/templates/exercise/staff/results.html
+++ b/exercise/templates/exercise/staff/results.html
@@ -105,6 +105,11 @@
 				<input type="checkbox" class="withsubs-checkbox" value="withsubs">
 				{% translate "RESULTS_SHOW_ONLY_STUDENT_WITH_SUBMISSIONS" %}
 			</label>
+			<label style="margin-left: 10px;" class="checkbox-inline" data-toggle="tooltip"
+				title="{% translate 'RESULTS_SISU_FORMAT' %}">
+				<input type="checkbox" class="sisuformat-checkbox" value="sisuformat">
+				{% translate "RESULTS_SISU_FORMAT" %}
+			</label>
 		</div>
 
 		<div class="col-sm-12" style="padding-bottom: 20px">
