Improve support channel links
Add Finnish versions of links in addition to the English versions.
Provide also the aplusguru email address when it's referenced.

--- a/templates/support_channels.html
+++ b/templates/support_channels.html
@@ -19,7 +19,7 @@
 			<div class="card-body">
 				<h3>{% translate "STUDIES" %}</h3>
 				<p class="card-text">
-					<a target="_blank" rel="noopener" href="https://into.aalto.fi/display/enopinnot">
+					<a target="_blank" rel="noopener" href="{% translate 'SUPPORT_STUDIES_LINK' %}">
 						{% translate "STUDIES" %}
 					</a>
 				</p>
@@ -29,22 +29,22 @@
 					</a>
 				</p>
 				<p class="card-text">
-					<a target="_blank" rel="noopener" href="https://into.aalto.fi/display/enopisk/Student+services">
+					<a target="_blank" rel="noopener" href="{% translate 'SUPPORT_STUDENT_SERVICES_LINK' %}">
 						{% translate "STUDENT_SERVICES" %}
 					</a>
 				</p>
 				<p class="card-text">
-					<a target="_blank" rel="noopener" href="https://into.aalto.fi/display/enopisk/Support+for+studying">
+					<a target="_blank" rel="noopener" href="{% translate 'SUPPORT_SUPPORT_FOR_STUDYING_LINK' %}">
 						{% translate "SUPPORT_FOR_STUDYING" %}
 					</a>
 				</p>
 				<p class="card-text">
-					<a target="_blank" rel="noopener" href="https://into.aalto.fi/display/enopisk/Study+skills">
+					<a target="_blank" rel="noopener" href="{% translate 'SUPPORT_STUDY_SKILLS_LINK' %}">
 						{% translate "STUDY_SKILLS" %}
 					</a>
 				</p>
 				<p class="card-text">
-					<a target="_blank" rel="noopener" href="https://into.aalto.fi/display/enopisk/Starting+Point+of+Wellbeing">
+					<a target="_blank" rel="noopener" href="{% translate 'SUPPORT_STARTING_POINT_OF_WELLBEING_LINK' %}">
 						{% translate "STARTING_POINT_OF_WELLBEING" %}
 					</a>
 				</p>
@@ -55,7 +55,7 @@
 			<div class="card-body">
 				<h3>{% translate "IT_SUPPORT" %}</h3>
 				<p class="card-text">
-					<a target="_blank" rel="noopener" href="https://www.aalto.fi/en/it-help">
+					<a target="_blank" rel="noopener" href="{% translate 'SUPPORT_IT_HELP_LINK' %}">
 						{% translate "IT_HELP" %}
 					</a>
 				</p>
@@ -75,7 +75,7 @@
 					</a>
 				</p>
 				<p class="card-text">
-					<a target="_blank" rel="noopener" href="https://www.aalto.fi/en/services/aalto-space-mobile-application">
+					<a target="_blank" rel="noopener" href="{% translate 'SUPPORT_AALTO_SPACE_APP_LINK' %}">
 						{% translate "AALTO_SPACE_APP" %}
 					</a>
 				</p>
