--- a/exercise/templates/exercise/staff/results.html
+++ b/exercise/templates/exercise/staff/results.html
@@ -177,7 +177,7 @@
 		</ul>
 
 		<!--Data table-->
-		<div id="table-points-div" class="table-responsive" role="tabpanel" style="padding: 20px 0px 0px 0px;">
+		<div class="table-responsive" role="tabpanel" style="padding: 20px 0px 0px 0px;">
 			<table id="table-points" class="table table-striped table-bordered table-condensed">
 				<thead id="table-heading">
 				</thead>
