Fix quotes and indents in translatable strings
Fix some minor style problems with indents and use of quotation marks
that resulted from switching to the English language pack as well as
typos in keys.

--- a/course/templates/course/_group_info.html
+++ b/course/templates/course/_group_info.html
@@ -2,7 +2,8 @@
 {% if id %}
   <span data-group-id="{{ id }}"></span>
   {% blocktranslate trimmed with collaborators=collaborators %}
-    GROUP_SUBMITTING_WITH -- {{ collaborators }}{% endblocktranslate %}
+    GROUP_SUBMITTING_WITH -- {{ collaborators }}
+  {% endblocktranslate %}
   {{ avatars }}
 {% else %}
   <span data-group-id="0"></span>
