--- a/course/templates/course/staff/group_delete.html
+++ b/course/templates/course/staff/group_delete.html
@@ -37,7 +37,7 @@
     </table>
 
     <div class="form-group">
-  		<input class="aplus-button--danger aplus-button--md" type="submit" value="{% translate "REMOVE" %}" />
+  		<input class="aplus-button--danger aplus-button--md" type="submit" value="{% translate 'REMOVE' %}" />
   		<a class="aplus-button--secondary aplus-button--md" role="button" href="{{ instance|url:'groups-list' }}">
   			{% translate "CANCEL" %}
   		</a>
