--- a/edit_course/templates/edit_course/edit_course_base.html
+++ b/edit_course/templates/edit_course/edit_course_base.html
@@ -15,7 +15,7 @@
 {% block columns %}
 <div class="col-md-12">
 
-    <nav aria-label="{% translate "EDIT_COURSE" %}">
+    <nav aria-label="{% translate 'EDIT_COURSE' %}">
     <ul class="nav nav-tabs">
         <li role="presentation" class="menu-course-clone">
             <a href="{{ instance|url:'course-clone' }}">
