--- a/exercise/templates/exercise/_user_results.html
+++ b/exercise/templates/exercise/_user_results.html
@@ -19,7 +19,7 @@
 <p id="toggle-expired" class="hide">
 	<button class="aplus-button--secondary aplus-button--xs">
 		<span class="glyphicon glyphicon-time" aria-hidden="true"></span>
-		{% translate "SHOW_OLDER_ASSINGMENTS" %}
+		{% translate "SHOW_OLDER_ASSIGNMENTS" %}
 	</button>
 </p>
 
