--- a/course/templates/course/_enroll_form.html
+++ b/course/templates/course/_enroll_form.html
@@ -12,12 +12,12 @@
 				{% else %}
 					{% translate "ENROLL_TO_SUBMIT_EXERCISES_AND_SEE_MATERIAL" %}
 				{% endif %}
-				<input type="submit" value="{% translate "ENROLL" %}" class="aplus-button--default aplus-button--md">
+				<input type="submit" value="{% translate 'ENROLL' %}" class="aplus-button--default aplus-button--md">
 				{% if instance.enrollment_ending_time %}
 					<div>
 						<small>
 							{% blocktranslate trimmed with end=instance.enrollment_ending_time %}
-							ENROLLMENT_OPEN_UNTIL -- {{ end }}
+								ENROLLMENT_OPEN_UNTIL -- {{ end }}
 							{% endblocktranslate %}
 						</small>
 					</div>
