--- a/exercise/templates/exercise/staff/_assess_info.html
+++ b/exercise/templates/exercise/staff/_assess_info.html
@@ -9,7 +9,7 @@
 {% endif %}
 <div class="panel panel-default">
 	<div class="panel-heading">
-		<h3 class="panel-title">{% translate "SUBITTED_DATA" %}</h3>
+		<h3 class="panel-title">{% translate "SUBMITTED_DATA" %}</h3>
 	</div>
 	<div class="panel-body">
 		<dl>
