--- a/deviations/templates/deviations/add_dl.html
+++ b/deviations/templates/deviations/add_dl.html
@@ -20,7 +20,7 @@
     {{ form|bootstrap_horizontal }}
     <div class="form-group">
         <div class="col-sm-10 col-sm-offset-2">
-            <button type="submit" class="aplus-button--default aplus-button--md">{% translate "SUBMIT" %}</button>
+            <button type="submit" class="aplus-button--default aplus-button--md">{% translate "SAVE" %}</button>
             <a href="{{ instance|url:'deviations-list-dl' }}" class="aplus-button--secondary aplus-button--md" role="button">{% translate "CANCEL" %}</a>
         </div>
     </div>
