--- a/edit_course/templates/edit_course/edit_model.html
+++ b/edit_course/templates/edit_course/edit_model.html
@@ -63,7 +63,7 @@
     {% endfor %}
     <div class="form-group">
         <div class="col-sm-10 col-sm-offset-2">
-            <button type="submit" class="aplus-button--default aplus-button--md">{% translate "SUBMIT" %}</button>
+            <button type="submit" class="aplus-button--default aplus-button--md">{% translate "SAVE" %}</button>
             <a class="aplus-button--secondary aplus-button--md" href="{{ instance|url:'course-edit' }}" role="button">
                 {% translate "CANCEL" %}
             </a>
