--- a/news/templates/news/edit.html
+++ b/news/templates/news/edit.html
@@ -20,7 +20,7 @@
     {{ form|bootstrap_horizontal }}
     <div class="form-group">
         <div class="col-sm-10 col-sm-offset-2">
-            <button type="submit" class="aplus-button--default aplus-button--md">{% translate "SUBMIT" %}</button>
+            <button type="submit" class="aplus-button--default aplus-button--md">{% translate "SAVE" %}</button>
             <a href="{{ instance|url:'news-list' }}" role="button" class="aplus-button--secondary aplus-button--md">{% translate "CANCEL" %}</a>
         </div>
     </div>
