Add feedback link to footer
Add a link to the footer which directs to a Webropol survery for
collecting feedback on A+ (on UI-texts, bugs, improvement suggestions,
etc.)

--- a/templates/base.html
+++ b/templates/base.html
@@ -229,6 +229,7 @@
 						<li><a href="{% url 'privacy_notice' %}">{% translate "PRIVACY_NOTICE" %}</a></li>
 						<li><a href="{% url 'accessibility_statement' %}">{% translate "ACCESSIBILITY_STATEMENT" %}</a></li>
 						<li><a href="{% url 'support_channels' %}">{% translate "SUPPORT" %}</a></li>
+						<li><a href="https://link.webropol.com/s/aplus-feedback" target="_blank">{% translate "FEEDBACK" %}</a></li>
 					</ul>
 				</div>
 			</div>
