Remove italic font from questionnaire hints
If italic font is used for the whole hint, then teachers are unable
to emphasize certain parts of the hint with italic font.
Let's use normal font for the hints and let teachers decide if
they need italic font in the hint.

--- a/assets/sass/protocols/_quiz1.scss
+++ b/assets/sass/protocols/_quiz1.scss
@@ -25,7 +25,7 @@ $questionnaire-focus-bg: #bce8f1;
 		margin-top: 5px;
 		margin-bottom: 5px;
 		color: #737373;
-		font-style: italic;
+		font-style: normal;
 	}
 
 	.hint-checkbox {
