Adjust results table top margin
Move margin from points table to surrounding div so it remains while
scrolling. Move sticky table header row to closer to top so other
cells don't peek from above.

--- a/exercise/static/exercise/css/results_staff.css
+++ b/exercise/static/exercise/css/results_staff.css
@@ -15,7 +15,12 @@
  #table-points-div {
 	max-height: calc(100vh - 12em);
 	max-width: 100vw;
+	margin-top: 6px;
 	overflow: scroll;
+}
+
+#table-points {
+	margin-top: 0 !important; /* To overwrite DataTable styling and improve scrolling; replaced with div margin */
 }
 
 #table-heading th {
@@ -25,7 +30,7 @@
 	background-color: white;
 	position: -webkit-sticky; /* Safari */
 	position: sticky;
-	top: 6px;
+	top: 0;
 	z-index: 2;
 }
 
