Remove student self-unenrollment
The ability for students to unenroll themselves from a course turned out
to be an undesired feature. Therefore this commit disables it. UI
elements have been commented out, the /enroll/ URL has been commented
out, and the DELETE operation on the course students API view is now
only available for course staff.

--- a/course/templates/course/_course_menu.html
+++ b/course/templates/course/_course_menu.html
@@ -211,6 +211,7 @@
 
 {% endif %}
 
+{% comment %}
 {% if is_student %}
 <li class="header">
 	<h4>{% trans "ENROLLMENT" %}</h4>
@@ -222,3 +223,4 @@
 	</a>
 </li>
 {% endif %}
+{% endcomment %}
