--- a/course/templates/course/course_base.html
+++ b/course/templates/course/course_base.html
@@ -146,6 +146,7 @@
 	</div>
 </div>
 
+{% comment %}
 <div id="unenroll-modal" class="modal" tabindex="-1" role="dialog" aria-labelledby="unenroll-modal-title">
 	<div class="modal-dialog" role="document">
 	  <div class="modal-content">
@@ -189,6 +190,7 @@
 	  </div>
 	</div>
 </div>
+{% endcomment %}
 {% endblock %}
 
 {% block mobilemenu %}
