Add a customizable note about personal data to the login page
Due to GDPR, users should be alerted before logging in about
how long personal data is stored in the system. The details may
vary in different organizations and thus, this note is
customizable in the server's local_settings.py. The structure of
the privacy notice may also vary in organizations and the note
in the login page may need to refer to certain sections of
the privacy notice.

--- a/userprofile/templates/userprofile/login.html
+++ b/userprofile/templates/userprofile/login.html
@@ -162,11 +162,6 @@
 		</div>
 	</div>
 
-	{% url 'privacy_notice' as privacy_url %}
-	<p>
-		{% blocktranslate trimmed with url=privacy_url %}
-			READ_OUR_PRIVACY_NOTICE -- {{ url }}
-		{% endblocktranslate %}
-	</p>
+	<p>{{ user_data_info|safe }}</p>
 
 {% endblock %}
