Emphasize the selected languages in the course language warning
Add the names of the currently selected languages to the warning about
the selected course language (the box "You are browsing this course in
a different language..."). The warning now shows which language is
selected in the preferences (saved in the course enrollment or
user profile) and in which language the content is displayed.

The warning is displayed when the hl URL query parameter uses
a different language than is saved in the preferences.

--- a/course/templates/course/course_base.html
+++ b/course/templates/course/course_base.html
@@ -86,7 +86,9 @@
 			<div lang={{user_language}}>
 				<div class="alert alert-default">
 					<img class="language-icon" src="/static/images/uls.svg" alt="">
-					{% translate "LANGUAGE_WARNING_BROWSING_IN_DIFFERENT_LANGUAGE_THAN_IN_PREFERENCES" %}
+					{% blocktranslate trimmed with display_lang=query_language|language_name_translated pref_lang=user_language|language_name_translated %}
+						LANGUAGE_WARNING_BROWSING_IN_DIFFERENT_LANGUAGE_THAN_IN_PREFERENCES -- {{ display_lang }}, {{ pref_lang }}
+					{% endblocktranslate %}
 					{% if user_course_data %}
 						<div class="button-container">
 							<form action="{{ url_without_language }}">
